# Robotics_CW2

./: CMakeLists.txt  package.xml  test.py
launch/: school_rescue_bug2.launch  school_rescue_ql.launch
scripts/: Bug2.py  FollowWall.py  GoToPoint.py  QLearning.py  SurvivorDetector.py
srv/: MineRescueSetBugStatus.srv  MineRescueSetQLStatus.srv
urdf/: com760group30Bot.urdf
world/: school_rescue.world
